solve long words without white space

--- a/static/chat.css
+++ b/static/chat.css
@@ -2,3 +2,7 @@
   overflow-y: auto; 
   height: 340px;
 }
+
+.chatcontent {
+  word-wrap: break-word;
+}
